--- a/styles/main.css
+++ b/styles/main.css
@@ -42,66 +42,84 @@ table {
 
 
 html {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 *, *::before, *::after {
-    box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 
 body { 
-    font-family: Roboto, Sans-serif; 
-    background-color: #fff; /*#f5e34752;*/
-    color: #7d6969; /*#716c6c; #7d6969*/
-    
-    
-    display: flex;
-    flex-direction: column;
+	font-family: Roboto, Sans-serif; 
+	background-color: #D4FABE; /*#f5e34752;*/
+	color: #7d6969; /*#716c6c; #7d6969*/
 }
 
 p {
-    color: black;
+	color: black;
 }
 
 li {
-    color: #5e2121;
+	color: #5e2121;
 }
 
 ul li {
-    list-style: none;
+	list-style: none;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 button {
-    cursor: pointer;
+	cursor: pointer;
 }
 
-.header, .welcome-section, .action-section {
-    padding: 16px 100px 60px;
+
+.shelf-support {
+	margin: 0;
 }
 
 .header {
-    background-color: #1F2937;
-    
-    display: flex;
-    justify-content: space-between;
+	background-color: transparent; /* #1F2937;*/
+	display: flex;
+	justify-content: space-between;
+	padding: 0 6px 0 10px;
+}
+
+.header__logo {
+	background-color: #E99797;
 }
 
 .header__navbar {
-    display: flex;
-    gap: 24px;
+	display: flex;
 }
 
 .header__navbar a {
-    color: #E5E7EB;
+	/*
+		light-green: #D4FABE;
+		lighter-red: #EDAEAE;
+		light-red: #E99797;
+		yellow: #F6D493;
+		violet: #9290F8;
+		brown: #D28238;
+		lighter-gray: #D9D9D9;
+		light-gray: #CCCACA;
+	*/
+	
+	background-color: #b9afaf; /*#D9D9D9;*/
+	margin-left: 8px;
+
 }
 
 .header__navbar a:hover {
-    color: #3882F6; /*#49a6e9;*/
+	color: #3882F6; /*#49a6e9;*/
+}
+
+
+.description-section__app-title {
+	color: #EDAEAE; /* #5F7E7D;*/
 }
 
 
@@ -113,17 +131,16 @@ button {
 
 
 
-
-
-.footer-section {
-    color: white;
-    background-color: #1F2937;
-    padding: 20px;
-    
-    display: flex;
-    justify-content: center;
-    align-content: center;
+.footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 6px 0 10px;
 }
 
+.footer__link a {
+	background-color: #b9afaf; /*#D9D9D9;*/
+}
 
-
+.footer__description {
+	background-color: #9290F8;
+}
