--- a/styles/main.css
+++ b/styles/main.css
@@ -77,6 +77,33 @@ button {
 }
 
 
+/*
+	light-brown: #d2a67e;
+	brown: #D28238;
+	lighter-gray: #D9D9D9;
+	light-gray: #CCCACA;
+	light-green: #D4FABE;
+	lighter-red: #EDAEAE;
+	light-red: #E99797;
+	violet: #9290F8;
+	yellow: #F6D493;
+	border: background: radial-gradient(#ac7732 5%, #d19341 1%,  #b1762a 1%, #874e03);
+	and book-images.......
+	<a target="_blank" href="https://icons8.com/icon/119436/book">Book</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+*/
+h1 {
+	font-size: 2rem;
+}
+h2 {
+	font-size: 1.7rem;
+}
+h3 {
+	font-size: 1.5rem;
+}
+h4 {
+	font-size: 1rem;
+}
+
 .shelf-support {
 	margin: 0;
 }
@@ -85,7 +112,7 @@ button {
 	background-color: transparent; /* #1F2937;*/
 	display: flex;
 	justify-content: space-between;
-	padding: 0 6px 0 10px;
+	margin: 0 2px 0 4px;
 }
 
 .header__logo {
@@ -96,39 +123,121 @@ button {
 	display: flex;
 }
 
-.header__navbar a {
-	/*
-		light-green: #D4FABE;
-		lighter-red: #EDAEAE;
-		light-red: #E99797;
-		yellow: #F6D493;
-		violet: #9290F8;
-		brown: #D28238;
-		lighter-gray: #D9D9D9;
-		light-gray: #CCCACA;
-	*/
-	
+.header__navbar li {
 	background-color: #b9afaf; /*#D9D9D9;*/
-	margin-left: 8px;
-
+}
+.header__navbar li:nth-child(2) {
+	background-color: #9290F8;
+}
+.header__navbar li:nth-child(4) {
+	background-color: #F6D493;
 }
 
-.header__navbar a:hover {
+.header__navbar a {
+	
+}
+
+.header__navbar a:hover, .footer__link a:hover {
 	color: #3882F6; /*#49a6e9;*/
 }
 
 
 .description-section__app-title {
-	color: #EDAEAE; /* #5F7E7D;*/
+	color: #5e6e5d; /* #5F7E7D;*/
+	
+}
+.description-section__app-title span {
+	color: #9290F8;
+	font-size: 2.6rem;
+	font-weight: bold;
+}
+
+.description-partition, .form-partition, .booklist-partition {
+	background: radial-gradient(#ac7732 5%, #d19341 1%,  #b1762a 1%, #874e03);
+	border-radius: 5px;
+	margin: auto;
+	padding: 16px 0;
+}
+
+.description-partition {
+	width: 74%;
+	margin-bottom: 110px;
+}
+
+.form-partition {
+	margin-bottom: 110px;
+	width: 95%;
+	height: 200px;
+}
+
+
+.booklist-partition {
+	width: 95%;
+	overflow: auto;
+}
+
+.shelf-ornament {
+	background-color: #EDAEAE;
+	height: 10px;
+	/*margin: 5px 0 2px 0;*/
+}
+
+.shelves {
+	background-color: white; /*#b9afaf #f3c176;*/
+	width: 90%;
+	border-radius: 2px;
+	margin: auto;
+}
+
+.description-shelf {
+	padding: 8px;
+	text-align: center;
+}
+
+.form-shelf {
+	height: 168px;
+	
 }
 
 
 
 
+.book {
+	background-color: #484787; /*#E99797; #6c2f2f;*/
+	margin-bottom: 5px;
+	padding: 8px;
+	display: flex;
+	align-items: center;
+}
 
+.book:last-child {
+	margin-bottom: 0;
+}
 
+.book img {
+	width: 54px;
+	height: 54px;
+}
 
+.book div {
+	margin-left: 10px;
+}
 
+.book h3 {
+	color: #F6D493; /*#af5959;*/
+	margin-bottom: 2px;
+}
+
+.book h4 {
+	color: #b9afaf;
+	margin-bottom: 6px;
+}
+
+.book p {
+	color: #8f8c8c; /*#9290F8;*/
+	font-size: 0.9rem;
+	margin-bottom: 2px;
+}
 
 
 .footer {
@@ -144,3 +253,13 @@ button {
 .footer__description {
 	background-color: #9290F8;
 }
+
+
+
+/* TESTING COLOR */
+.color-test {
+	background: radial-gradient(#ac7732 5%, #d19341 1%,  #b1762a 1%, #874e03);
+	height: 100px;
+}
+
+
