Fix checkbox state. Create and add a remove book button and fix the UI

--- a/styles/main.css
+++ b/styles/main.css
@@ -341,11 +341,13 @@ h5 {
 	background-color: #484787; /*#E99797; #6c2f2f;*/
 	margin: 0 4px 5px;
 	display: flex;
+	justify-content: space-between;
 	align-items: center;
 	min-height: 108px;
 	max-height: 108px;
 	border: 2px solid #9c6006;
 	border-radius:12px;
+	padding: 0 14px;
 }
 
 .book:last-child {
@@ -359,6 +361,7 @@ h5 {
 
 .book div {
 	margin-left: 10px;
+	width: 220px;
 }
 
 .book h3 {
@@ -375,6 +378,13 @@ h5 {
 	color: #8f8c8c; /*#9290F8;*/
 	font-size: 0.9rem;
 	margin-bottom: 2px;
+}
+
+.book-btn {
+	color: #b9afaf;
+	background-color: #87444491;
+	border: 1px solid #b9afaf;
+	border-radius: 4px;
 }
 
 
