Create event listener for remove btn. Use index to set data-id on btn

--- a/styles/main.css
+++ b/styles/main.css
@@ -380,7 +380,7 @@ h5 {
 	margin-bottom: 2px;
 }
 
-.book-btn {
+.remove-btn {
 	color: #b9afaf;
 	background-color: #87444491;
 	border: 1px solid #b9afaf;
