--- a/styles/main.css
+++ b/styles/main.css
@@ -98,7 +98,7 @@ h2 {
 	font-size: 1.7rem;
 }
 h3 {
-	font-size: 1.5rem;
+	font-size: 1.4rem;
 }
 h4 {
 	font-size: 1.2rem;
@@ -284,8 +284,7 @@ h5 {
 	padding: 6px;
 	border-radius: 4px;
 	position: relative;
-	bottom: 25px;
-	
+	bottom: 25px;	
 	display: none;
 }
 .form-validation p {
@@ -347,7 +346,7 @@ h5 {
 	max-height: 108px;
 	border: 2px solid #9c6006;
 	border-radius:12px;
-	padding: 0 14px;
+	padding: 0 2px;
 }
 
 .book:last-child {
@@ -360,7 +359,6 @@ h5 {
 }
 
 .book div {
-	margin-left: 10px;
 	width: 220px;
 }
 
@@ -377,7 +375,6 @@ h5 {
 .book p {
 	color: #8f8c8c; /*#9290F8;*/
 	font-size: 0.9rem;
-	margin-bottom: 2px;
 }
 
 .remove-btn {
@@ -431,6 +428,13 @@ h5 {
 	.header__navbar li { 
 		padding-left: 6px;
 		padding-right: 6px;
+	}
+	
+	.book {
+		padding: 0 6px;
+	}
+	.book div {
+		width: 220px;
 	}
 }
 
