--- a/styles/main.css
+++ b/styles/main.css
@@ -247,13 +247,13 @@ h5 {
 .form-validation {
 	color: #efb1b1;
 	font-weight: bold;
-	background-color: #cccaca2e; /*#CCCACA;*/
+	background-color: #b5e67c; /*#CCCACA;*/
 	text-align: center;
 	width: 290px;
 	height: 110px;
 	margin: auto;
 	padding: 6px;
-	border-radius: 4px;
+	border-radius: 20px;
 	position: relative;
 	bottom: 25px;	
 	display: none;
@@ -267,7 +267,7 @@ h5 {
 }
 
 .message-board-text {
-	color: #492727; /*#efb1b1;*/
+	color: #4a3100; /*#6765db #492727; #efb1b1;*/
 	font-weight: bold;
 	margin-top: 5px;
 	line-height: 30px;
