--- a/styles/main.css
+++ b/styles/main.css
@@ -249,14 +249,15 @@ h5 {
 	font-weight: bold;
 	background-color: #b5e67c; /*#CCCACA;*/
 	text-align: center;
-	width: 290px;
-	height: 110px;
+	width: 330px;
+	height: 170px;
 	margin: auto;
-	padding: 6px;
+	padding: 12px 6px 6px 6px;
 	border-radius: 20px;
 	position: relative;
 	bottom: 25px;	
 	display: none;
+    margin-bottom: 30px;
 }
 
 .form-validation-text {
@@ -322,7 +323,7 @@ h5 {
 	justify-content: space-between;
 	align-items: center;
 	min-height: 108px;
-	max-height: 108px;
+	max-height: 120px;
 	border: 2px solid #9c6006;
 	border-radius:12px;
 	padding: 0 2px;
