--- a/styles/main.css
+++ b/styles/main.css
@@ -89,11 +89,7 @@ h5 {
 }
 .div-shelf-support-bottom {
 	background-color: #b9afaf;
-	width: 94%;
-	max-width: 413px;
-	height: 15px;
-	margin: auto;
-	border-radius: 5px;
+	height: 4px;
 }
 
 .header {
@@ -119,7 +115,7 @@ h5 {
 
 .header__navbar li {
 	background-color: #b9afaf; /*#D9D9D9;*/
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	margin-left: 4px;
 	padding: 2px 2px 0 2px;
 }
@@ -176,7 +172,29 @@ h5 {
 	margin-bottom: 0.5px;
 }
 
-.inner-shelf-ornament {
+.about-section {
+	text-align: center;
+	line-height: 16px;
+	width: 96px;
+	height: 96px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+}
+
+.about-section a {
+	color: #E99797;
+}
+.about-section a:hover {
+	text-shadow: 1px 1px 2px #6b5534; /*#716fe2; #442f08;*/
+}
+
+
+
+
+
+
+.description-section__ornament {
 	background-color: #EDAEAE;
 	height: 10px;
 	/*margin: 5px 0 2px 0;*/
@@ -190,34 +208,33 @@ h5 {
 	margin: auto;
 }
 
-
-.book-stack-icon {
+.book-stack__icon {
 	display: block;
 	margin: auto;
 	text-align: center;
 }
-.book-stack-icon a {
+.book-stack__icon a {
 	color: #b9afaf;
 }
-.book-stack-icon a:hover {
+.book-stack__icon a:hover {
 	text-shadow: 2px 2px white;
 }
 
-.div-wall-ornament-acute1 {
+.book-stack__ornament1 {
 	background-color: #F6D493;
 	width: 74%;
 	height: 10px;
 	margin: 0 auto 10px;
 	border-radius: 4px;
 }
-.div-wall-ornament-acute2 {
+.book-stack__ornament2 {
 	background-color: #F6D493;
 	width: 64%;
 	height: 10px;
 	margin: 0 auto 10px;
 	border-radius: 4px;
 }
-.div-wall-ornament-acute3 {
+.book-stack__ornament3 {
 	background-color: #F6D493;
 	width: 34%;
 	height: 10px;
@@ -240,11 +257,7 @@ h5 {
 	border-radius:12px;
 }
 
-.required-field {
-	color: #e02525;
-}
-
-.form-validation {
+.message-board {
 	color: #efb1b1;
 	font-weight: bold;
 	background-color: #b5e67c; /*#CCCACA;*/
@@ -260,33 +273,38 @@ h5 {
     margin-bottom: 30px;
 }
 
-.form-validation-text {
+.message-board-validation {
 	color: #efb1b1;
 	font-weight: bold;
 	margin-top: 5px;
 	line-height: 30px;
 }
 
-.message-board-text {
+.message-board-msg {
 	color: #4a3100; /*#6765db #492727; #efb1b1;*/
 	font-weight: bold;
 	margin-top: 5px;
 	line-height: 30px;
 }
 
-.form-shelf {
+
+.form-partition__shelf {
 	display: block;
 	width: 90%;
 	margin: auto;
 }
 
-.form-shelf__desc {
+.form-partition__required-field {
+	color: #e02525;
+}
+
+.form-partition__desc {
 	color: #695425;
 	text-align: center;
 	margin: 10px 0 30px;;
 }
 
-.form-shelf label {
+.form-partition__shelf label {
 	color: #5e4c4c;
 	display: block;
 	width: 80%;
@@ -294,29 +312,29 @@ h5 {
 	text-align: center;
 }
 
-.form-shelf input[type="text"] {
+.form-partition__shelf input[type="text"] {
 	display: block;
 	width: 100%;
 	margin: 5px 0 20px 0;
 }
 
-.form-shelf input[type="number"] {
+.form-partition__shelf input[type="number"] {
 	width: 25%;
 	margin-bottom: 10px;
 }
 
-.form-shelf input[type="checkbox"] {
+.form-partition__shelf input[type="checkbox"] {
 	margin-bottom: 35px;
 }
 
-.form-btn {
+.form-partition__btn {
 	display: block;
 	margin: 0 auto 10px;
 	
 }
 
 
-.book {
+.booklist-partition__book {
 	background-color: #484787; /*#E99797; #6c2f2f;*/
 	margin: 0 4px 5px;
 	display: flex;
@@ -329,50 +347,49 @@ h5 {
 	padding: 0 2px;
 }
 
-.book:last-child {
+.booklist-partition__book:last-child {
 	margin-bottom: 0;
 }
 
-.book img {
+.booklist-partition__icon {
 	width: 54px;
 	height: 54px;
 }
 
-.book div {
+.booklist-partition__book-content {
 	width: 220px;
 }
 
-.book h3 {
+.booklist-partition__title {
 	color: #F6D493; /*#af5959;*/
 	margin-bottom: 2px;
 }
 
-.book h5 {
+.booklist-partition__author {
 	color: #b9afaf;
 	margin-bottom: 1px;
 }
 
-.book p {
+.booklist-partition__pages {
 	color: #8f8c8c; /*#9290F8;*/
 	font-size: 0.9rem;
 	margin-bottom: 5px;
 }
 
-.book-not-read {
+.booklist-partition__book-not-read {
 	color: #eb9e9e; /*#8f8c8c;*/
 	background-color: #87444469;
 	border-radius: 6px;
 	padding: 1px 5px;
 }
-.book-read {
+.booklist-partition__book-read {
 	color: #443939;
 	background-color: #d4fabea6; /*#D4FABE;*/
 	border-radius: 6px;
 	padding: 1px 5px;
 }
 
-
-.remove-btn {
+.booklist-partition__remove-btn {
 	color: #b9afaf;
 	background-color: #87444491;
 	border: 1px solid #b9afaf;
@@ -382,11 +399,7 @@ h5 {
 
 
 .footer {
-	display: flex;
-	justify-content: space-between;
-	padding: 0 6px 0 10px;
-	max-width: 413px;
-	margin: auto;
+	background-color: #9290F8;
 }
 
 .footer__link {
@@ -403,12 +416,11 @@ h5 {
 
 .footer__description {
 	color: black;
-	background-color: #9290F8;
-	font-size: 1.1rem;
-	margin-right: 4px;
-	padding: 0 6px 4px 6px;
-	border-radius: 4px;
+	font-weight: bold;
+	font-size: 1.2rem;
+	padding: 3px 10px 4px 3px;
 	line-height: 28px;
+	text-align: right;
 }
 
 
@@ -422,6 +434,7 @@ h5 {
 		padding-right: 6px;
 	}
 	.header__navbar li { 
+		font-size: 1.2rem;
 		padding-left: 6px;
 		padding-right: 6px;
 	}
@@ -435,14 +448,6 @@ h5 {
 }
 
 @media only screen and (min-width: 755px) {
-	.footer {
-		max-width:755px;
-	}
-	.div-shelf-support-bottom {
-		width: 96%;
-		max-width: 750px;
-	}
-	
 	.description-section__app-title {
 		font-size: 3.2rem;
 	}
@@ -471,12 +476,12 @@ h5 {
 
 	}
 	
-	.book-partitions-container {
-		display: flex;
-		align-items: end;
-		max-width: 753px;
-		margin: auto;
-	}
+	/* .book-partitions-container { */
+		/* display: flex; */
+		/* align-items: end; */
+		/* max-width: 753px; */
+		/* margin: auto; */
+	/* } */
 }
 
 
