--- a/styles/main.css
+++ b/styles/main.css
@@ -129,6 +129,7 @@ h5 {
 }
 
 .div-ornament-top {
+	display: none;
 	background-color: #F6D493;
 	width: 64%;
 	max-width: 221px;
@@ -155,7 +156,7 @@ h5 {
 	width: 74%;
 	min-width: 300px;
 	max-width: 300px;
-	margin-top: 0.5px;
+	margin-top: 20px;
 	margin-bottom: 110px;
 }
 
@@ -318,7 +319,7 @@ h5 {
 
 
 .booklist-partition {
-	background-color: #2e2d27; /*#fff9c9; #F6D493;*/
+	background-color: #739195; /*#2e2d27; #fff9c9; #F6D493;*/
 	overflow: auto;
 }
 
@@ -433,17 +434,6 @@ h5 {
 		padding-right: 6px;
 	}
 	
-	.description-partition {
-		max-width: 330px;
-	}
-	.description-partition__app-title {
-		font-size: 2.2rem;
-	}
-	.description-partition__app-title span {
-		font-size: 3.2rem;
-	}
-	
-	
 	.booklist-partition__shelf {
 		display: flex;
 		flex-wrap: wrap;
@@ -451,27 +441,9 @@ h5 {
 }
 
 @media only screen and (min-width: 755px) {
-	.top-grid-container {
-		display: grid;
-		grid-template-areas:
-			'top-area2 top-area1 top-area1';
-		align-items: end;
-	}
-	.description-partition {
-		/* width: 94%; */
-		max-width: 380px;
-		margin-bottom: 150px;
-		grid-area: top-area1;
-	}
-	.description-partition__app-title {
-		font-size: 2.6rem;
-	}
-	.description-partition__app-title span {
-		font-size: 4rem;
-	}
-	
-	.book-stack {
-		grid-area: top-area2;
+	.header__navbar {
+		width: 600px;
+		justify-content: space-between;
 	}
 	
 	.book-stack__ornament1 {
@@ -485,44 +457,41 @@ h5 {
 	}
 	
 	.form-partition {
-		grid-area: bottom-area1;
 		width: 100%;
 		margin-bottom: 60px; /* (484 - 365) /2 = 60*/
 	}
 	
 	.booklist-partition {
 		/* background-color: transparent; */
-		grid-area: bottom-area2;
+		grid-area: bookshelf;
 	}
 	
-	.book-partitions-container {
-		background-color: #2e2d27; /*#fff9c9;*/
+	.container {
+		grid-area: top-area;
+		display: flex;
+		flex-direction: column;	
+		margin-left: 20px;
+	}
+	
+	.main-container {
 		display: grid;
 		grid-template-areas: 
-			'bottom-area1 bottom-area2  bottom-area2';
-		align-items: center;
+			'top-area bookshelf';
+		grid-column-gap: 50px;
 	}
-	
 }
 
 
 @media only screen and (min-width: 1010px) {
-	.div-support-top {
-		width: 77%;
-		max-width: 1050px;
+	.header__logo {
+		font-size: 1.4rem;
+		padding-left: 12px;
+		padding-right: 12px;
 	}
-	
-	.description-partition {
-		width: 94%; 
-		max-width: 700px;
-		/* margin-bottom: 50px; */
-	}
-	.description-partition__app-title {
-		font-size: 2.8rem;
-		padding: 14px;
-	}
-	.description-partition__app-title span {
-		font-size: 4.2rem;
+	.header__navbar li { 
+		font-size: 1.3rem;
+		padding-left: 12px;
+		padding-right: 12px;
 	}
 }
 
