--- a/styles/main.css
+++ b/styles/main.css
@@ -153,9 +153,9 @@ h5 {
 }
 
 .description-partition {
-	width: 74%;
-	min-width: 300px;
-	max-width: 300px;
+	width: 84%;
+	min-width: 370px;
+	max-width: 370px;
 	margin-top: 20px;
 	margin-bottom: 110px;
 }
@@ -174,7 +174,7 @@ h5 {
 }
 .description-partition__app-title span {
 	color: #9290F8;
-	font-size: 3rem;
+	font-size: 2.8rem;
 	font-weight: bold;
 	
 }
@@ -269,7 +269,7 @@ h5 {
 .form-partition {
 	margin-bottom: 110px;
 	width: 96%;
-	max-width: 331px;
+	max-width: 425px;
 }
 
 .form-partition__shelf {
@@ -444,7 +444,7 @@ h5 {
 	}
 }
 
-@media only screen and (min-width: 755px) {
+@media only screen and (min-width: 830px) {
 	.header__navbar {
 		width: 600px;
 		justify-content: space-between;
@@ -461,7 +461,7 @@ h5 {
 	}
 	
 	.form-partition {
-		width: 100%;
+/* 		width: 100%; */
 		margin-bottom: 60px; /* (484 - 365) /2 = 60*/
 	}
 	
