--- a/styles/main.css
+++ b/styles/main.css
@@ -389,6 +389,13 @@ h5 {
 	border-radius: 4px;
 }
 
+.booklist-partition__book-desc {
+	color: white;
+	background-color: blue;
+}
+
+
+
 .div-support-bottom {
 	background-color: #b9afaf;
 	height: 4px;
