--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,7 @@ h1 {
 	font-size: 2.2rem;
 }
 h2 {
-	font-size: 2rem;
+	font-size: 1.9rem;
 }
 h3 {
 	font-size: 1.3rem;
@@ -423,12 +423,17 @@ h5 {
 	text-align: center;
 }
 
-.booklist-partition__desc-text1 {
-	text-shadow: 1px 1px 1px #e17070, 3px 3px 3px #e3c9c6, 2.5px 2.5px 2.5px yellow;
+.booklist-partition__board-title {
+    text-shadow: 1px 1px 1px #e17070, 3px 3px 3px #e3c9c6, 2.5px 2.5px 2.5px yellow;
     margin-bottom: 10px;
 }
 
-.booklist-partition__desc-text2 {
+.booklist-partition__board-text1 {
+    color: rgb(118, 112, 114);
+    margin-bottom: 40px;
+}
+
+.booklist-partition__board-text2 {
 	color: #9b5252; /*darker=#fdbb5b; lighter=#f8e0bd;*/
 /* 	margin-top: 40px; */
 }
@@ -437,7 +442,7 @@ h5 {
 	background-color: #F6D493;
 	height: 10px;
     width: 72%;
-    margin: 0 auto 40px;
+    margin: auto;
     border-radius: 22px;
 }
 
