--- a/styles/main.css
+++ b/styles/main.css
@@ -285,7 +285,15 @@ h5 {
 .form-partition__desc {
 	color: #695425;
 	text-align: center;
-	margin: 10px 0 30px;;
+	line-height: 25px;
+	margin: 10px 10px 30px;
+}
+
+.form-partition__selected {
+	color: red;
+	text-align: center;
+	line-height: 25px;
+	margin: 10px 10px 40px;
 }
 
 .form-partition__shelf label {
@@ -311,10 +319,14 @@ h5 {
 	margin-bottom: 35px;
 }
 
-.form-partition__btn {
-	display: block;
-	margin: 0 auto 10px;
-	
+.form-partition__btns {
+	display: flex;
+	justify-content: center;
+	gap: 2px;
+}
+
+.form-partition__add, .form-partition__clear, .form-partition__edit {
+	border-radius: 10px;
 }
 
 
@@ -419,7 +431,7 @@ h5 {
 	padding: 30px;
 	margin: 50px auto;
 	border-radius: 22px;
-	line-height: 2.5rem;
+	line-height: 2.2rem;
 	text-align: center;
 }
 
@@ -449,36 +461,38 @@ h5 {
 
 
 
-.current-book {
-	background-color: white;
-	height: 140px;
-	width: 70%;
-	margin: 0 auto 25px;
-	padding: 20px;
-	border-radius: 70px;
-	text-align: center;
-}
 
-.current-book__intro {
-	text-decoration: underline;
-	margin-bottom: 20px;
-}
 
-.current-book__title {
-	color: red;
-	margin-bottom: 10px;
-}
+/* .current-book { */
+	/* background-color: white; */
+	/* height: 140px; */
+	/* width: 70%; */
+	/* margin: 0 auto 25px; */
+	/* padding: 20px; */
+	/* border-radius: 70px; */
+	/* text-align: center; */
+/* } */
 
-.current-book__btn {
-	background-color: #F6D493;
-	width: 55px;
-	margin: auto;
-	padding: 3px 0;
-	border-radius: 12px;
-	cursor: pointer;
+/* .current-book__intro { */
+	/* text-decoration: underline; */
+	/* margin-bottom: 20px; */
+/* } */
+
+/* .current-book__title { */
+	/* color: red; */
+	/* margin-bottom: 10px; */
+/* } */
+
+/* .current-book__btn { */
+	/* background-color: #F6D493; */
+	/* width: 55px; */
+	/* margin: auto; */
+	/* padding: 3px 0; */
+	/* border-radius: 12px; */
+	/* cursor: pointer; */
 	
-	display: none;
-}
+	/* display: none; */
+/* } */
 
 
 
