--- a/styles/main.css
+++ b/styles/main.css
@@ -323,6 +323,7 @@ h5 {
 	display: flex;
 	justify-content: center;
 	gap: 2px;
+	margin: 10px;
 }
 
 .form-partition__add, .form-partition__clear, .form-partition__edit {
