--- a/styles/main.css
+++ b/styles/main.css
@@ -337,7 +337,7 @@ h5 {
 	
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	/* justify-content: space-around; */
 }
 
 .booklist-partition__shelf {
