--- a/styles/main.css
+++ b/styles/main.css
@@ -214,6 +214,12 @@ h5 {
 	border-radius: 4px;
 }
 
+.search-form__description {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: baseline;
+}
+
 .search-form__legend { 
 	font-size: 1.5rem;
 	font-weight: bold; 
@@ -221,6 +227,12 @@ h5 {
 	margin-bottom: 25px; 
 	/* text-align: center; */
 	text-decoration: underline;
+}
+
+.search-form__icon {
+	width: 20px;
+	height: 20px;
+	cursor: pointer;
 }
 
 .search-form__label { 
@@ -339,7 +351,7 @@ h5 {
 	
 	display: flex;
 	flex-direction: column;
-	/* justify-content: space-around; */
+	justify-content: space-evenly;
 }
 
 .booklist-partition__shelf {
