--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@ html {
 
 body { 
 	font-family: Roboto, Sans-serif; 
-	background-color: #D4FABE; /*#f5e34752;*/
+	background-color: #D4FABE; /*#ebf3e1; #D4FABE; #f5e34752;*/
 	color: #7d6969; /*#716c6c; #7d6969*/
 }
 
@@ -124,12 +124,12 @@ h5 {
 	width: 97%;
 	/* max-width: 475px; */
 	height: 15px;
-	margin: auto;
+	margin: 0px auto 0px;
 	border-radius: 5px;
 }
 
 .div-ornament-top {
-	display: none;
+	display: block;
 	background-color: #F6D493;
 	width: 64%;
 	max-width: 221px;
@@ -146,7 +146,7 @@ h5 {
 }
 
 
-/* LIBRARY DESCRIPTION PARTITION */
+/* DESCRIPTION PARTITION */
 .description-partition, .form-partition {
 	background: radial-gradient(#ac7732 5%, #d19341 1%,  #b1762a 1%, #874e03);
 	border-radius: 5px;
@@ -158,8 +158,7 @@ h5 {
 	width: 84%;
 	min-width: 370px;
 	max-width: 370px;
-	margin-top: 20px;
-	margin-bottom: 100px;
+	margin-bottom: 140px;
 }
 
 .description-partition__shelf {
@@ -201,6 +200,24 @@ h5 {
 	margin-bottom: 5px;
 }
 
+
+.hero {
+	display: none;
+}
+.hero_image {
+	width: 100%; 
+	height: 300px;
+	display: block;
+	margin: 0 auto 0px;
+	border-top: 2px solid #a18e72;
+}
+
+
+/* BOOKSHELF PARTITIONS */
+.forms-partition {
+	background-color: #9290F8; /*#484787; beige; #ebf3e1; #8E001C; #201f61;*/
+	/* padding: 60px 0; */
+}
 
 /* SEARCH FORM */
 .search-form {
@@ -289,9 +306,9 @@ h5 {
 
 /* FORM PARTITION */
 .form-partition {
-	margin-bottom: 110px;
 	width: 96%;
 	max-width: 425px;
+	/* margin-bottom: 110px; */
 }
 
 .form-partition__shelf {
@@ -488,17 +505,18 @@ h5 {
 
 /* ASIDE SECTION */
 .aside-section {
-	background-color: beige;
-	
+	/* background-color: #9290F8; /*#201f61;  #D4FABE; #ebf3e1; beige;*/ 
+	height: 680px;
 }
 
 .aside-image {
 	width: 100%;
+	height: 100%;
 }
 
 
 .book-stack {
-	padding-top: 30px;
+	padding: 60px;
 }
 
 .book-stack__icon {
@@ -536,8 +554,9 @@ h5 {
 	background-color: #F6D493;
 	width: 34%;
 	height: 10px;
-	margin: 0 auto 70px;
 	border-radius: 4px;
+	margin: 0 auto 0px;
+	/* margin: 0 auto 70px; */
 }
 
 
@@ -607,18 +626,20 @@ h5 {
 		justify-content: space-between;
 	}
 	
-	.book-stack__ornament1 {
-		width: 34%;
+	.div-support-top {
+		/* margin-bottom: 100px; */
 	}
-	.book-stack__ornament2 {
-		width: 24%;
+	
+	.description-partition {
+		margin-bottom: 165px;
 	}
-	.book-stack__ornament3 {
-		width: 14%;
+	
+	.hero {
+		display: block;
 	}
 	
 	.form-partition {
-/* 		width: 100%; */
+		/* width: 100%; */
 		margin-bottom: 60px; /* (484 - 365) /2 = 60*/
 	}
 	
@@ -642,6 +663,12 @@ h5 {
 		/* grid-column-gap: 50px; */
 	}
 	
+	
+	.search-form {
+		margin-bottom: 70px;
+	}
+	
+	
 	.aside-section {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
@@ -650,6 +677,16 @@ h5 {
 	
 	.aside-image {
 		object-fit: cover;
+	}
+	
+	.book-stack__ornament1 {
+		width: 34%;
+	}
+	.book-stack__ornament2 {
+		width: 24%;
+	}
+	.book-stack__ornament3 {
+		width: 14%;
 	}
 	
 	.book-stack__links {
