Upgrade CSS body background-color

--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@ html {
 
 body { 
 	font-family: Roboto, Sans-serif; 
-	background-color: #D4FABE; /*#ebf3e1; #D4FABE; #f5e34752;*/
+	background-color: #ebf3e1; /*#ebf3e1; #D4FABE; #f5e34752;*/
 	color: #7d6969; /*#716c6c; #7d6969*/
 }
 
